Added comments throughout and tests.

--- a/Jobber/Jobber.html
+++ b/Jobber/Jobber.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="jobber.css">
-	<script src="version.js"></script>
-	<script src="spiral.js"></script>
-	<script src="secret.js"></script>
-	<script src="kata.js"></script>
+	<script src="Version.js"></script>
+	<script src="Spiral.js"></script>
+	<script src="Secret.js"></script>
+	<script src="Kata.js"></script>
+	<script src="Test.js"></script>
 </head>
 <body>
 	<header>
